{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 350,
  "lineage": "6c3d71c6-d29f-9ad9-9cd5-d4bf0b4b6942",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c14d55d5924d86af",
            "arn": "arn:aws:ec2:us-east-2:125896621773:elastic-ip/eipalloc-0c14d55d5924d86af",
            "association_id": "eipassoc-0079991d1cc53606c",
            "domain": "vpc",
            "id": "eipalloc-0c14d55d5924d86af",
            "network_border_group": "us-east-2",
            "network_interface": "eni-09764d2fa46858589",
            "private_dns": "ip-10-0-1-101.us-east-2.compute.internal",
            "private_ip": "10.0.1.101",
            "public_dns": "ec2-52-14-196-116.us-east-2.compute.amazonaws.com",
            "public_ip": "52.14.196.116",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:125896621773:internet-gateway/igw-039a69aff5483a964",
            "id": "igw-039a69aff5483a964",
            "owner_id": "125896621773",
            "tags": {
              "Name": "qrify-igw"
            },
            "tags_all": {
              "Name": "qrify-igw"
            },
            "vpc_id": "vpc-0858d24d060a1cc02"
          },
          "dependencies": [
            "module.eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c14d55d5924d86af",
            "association_id": "eipassoc-0079991d1cc53606c",
            "connectivity_type": "public",
            "id": "nat-0cb55aa00d64edbc1",
            "network_interface_id": "eni-09764d2fa46858589",
            "private_ip": "10.0.1.101",
            "public_ip": "52.14.196.116",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ffc1613192648f81",
            "tags": {
              "Name": "qrify-nat"
            },
            "tags_all": {
              "Name": "qrify-nat"
            }
          },
          "dependencies": [
            "module.eks.aws_eip.nat",
            "module.eks.aws_internet_gateway.igw",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:125896621773:route-table/rtb-08f53786d50ea7162",
            "id": "rtb-08f53786d50ea7162",
            "owner_id": "125896621773",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cb55aa00d64edbc1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "qrify-private-rt"
            },
            "tags_all": {
              "Name": "qrify-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0858d24d060a1cc02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_eip.nat",
            "module.eks.aws_internet_gateway.igw",
            "module.eks.aws_nat_gateway.nat",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:125896621773:route-table/rtb-06f09cb16044bdb67",
            "id": "rtb-06f09cb16044bdb67",
            "owner_id": "125896621773",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-039a69aff5483a964",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "qrify-public-rt"
            },
            "tags_all": {
              "Name": "qrify-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0858d24d060a1cc02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_internet_gateway.igw",
            "module.eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b41e23ce4b8426d0",
            "route_table_id": "rtb-08f53786d50ea7162",
            "subnet_id": "subnet-098f092243fba4595"
          },
          "dependencies": [
            "module.eks.aws_eip.nat",
            "module.eks.aws_internet_gateway.igw",
            "module.eks.aws_nat_gateway.nat",
            "module.eks.aws_route_table.private",
            "module.eks.aws_subnet.private",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "private-b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098d4dd533a4d6b49",
            "route_table_id": "rtb-08f53786d50ea7162",
            "subnet_id": "subnet-04a904036aa3797a4"
          },
          "dependencies": [
            "module.eks.aws_eip.nat",
            "module.eks.aws_internet_gateway.igw",
            "module.eks.aws_nat_gateway.nat",
            "module.eks.aws_route_table.private",
            "module.eks.aws_subnet.private",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0410dd96cc7b31261",
            "route_table_id": "rtb-06f09cb16044bdb67",
            "subnet_id": "subnet-0ffc1613192648f81"
          },
          "dependencies": [
            "module.eks.aws_internet_gateway.igw",
            "module.eks.aws_route_table.public",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public-b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cec627e44c69cf6",
            "route_table_id": "rtb-06f09cb16044bdb67",
            "subnet_id": "subnet-04b9d65ef76ff74f9"
          },
          "dependencies": [
            "module.eks.aws_internet_gateway.igw",
            "module.eks.aws_route_table.public",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:125896621773:subnet/subnet-098f092243fba4595",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098f092243fba4595",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125896621773",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "qrify-private-a",
              "kubernetes.io/cluster/qrify-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "qrify-private-a",
              "kubernetes.io/cluster/qrify-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0858d24d060a1cc02"
          },
          "dependencies": [
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "private-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:125896621773:subnet/subnet-04a904036aa3797a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a904036aa3797a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125896621773",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "qrify-private-b",
              "kubernetes.io/cluster/qrify-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "qrify-private-b",
              "kubernetes.io/cluster/qrify-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0858d24d060a1cc02"
          },
          "dependencies": [
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:125896621773:subnet/subnet-0ffc1613192648f81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffc1613192648f81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "125896621773",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "qrify-public-a",
              "kubernetes.io/cluster/qrify-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "qrify-public-a",
              "kubernetes.io/cluster/qrify-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0858d24d060a1cc02"
          },
          "dependencies": [
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:125896621773:subnet/subnet-04b9d65ef76ff74f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b9d65ef76ff74f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "125896621773",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "qrify-public-b",
              "kubernetes.io/cluster/qrify-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "qrify-public-b",
              "kubernetes.io/cluster/qrify-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0858d24d060a1cc02"
          },
          "dependencies": [
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:125896621773:vpc/vpc-0858d24d060a1cc02",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02c086d3ce82e12a9",
            "default_route_table_id": "rtb-00a2432fad3d878b8",
            "default_security_group_id": "sg-07a1a2645c3cd2afe",
            "dhcp_options_id": "dopt-017c6eee62d7e89a5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0858d24d060a1cc02",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00a2432fad3d878b8",
            "owner_id": "125896621773",
            "tags": {
              "Name": "qrify-vpc"
            },
            "tags_all": {
              "Name": "qrify-vpc"
            }
          }
        }
      ]
    }
  ]
}